test/success/system/_test_expr4.hs
b :: Bool
b = (not True)
c :: Int
c = -2
f :: Bool
f = let a :: Bool; a = True
        e :: Double; e = 0.0
    in a
main = print 0
