test/fail/integration/_fail_grammar_expr_value_list_1.hs
main = do
       let x :: [Int]; x = []
       print (x !! 0)